# api_queue

./: api.http
api_quote/: pyproject.toml  test.ipynb
api_quote/api_quote/: fake_data.py  main.py  print_name.py  request_pokemon.py  service.py  service_queue.py
api_quote/api_quote/utils/: interval.py
app_elysia/: bun.lockb  package.json
app_elysia/src/: index.ts
