[tool.poetry]
name = "api-quote"
version = "0.1.0"
description = ""
authors = ["Dárley Raffael <darleyraffael@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
httpx = "^0.27.0"
fastapi = "^0.111.0"
taskipy = "^1.13.0"
faker = "^26.0.0"


[tool.poetry.scripts]
app="api_quote.main:app"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
dev = "uvicorn api_quote.main:app --reload"